Update APIDispositiviImpl.java